nuevo README - template para autores en capitulos

--- a/codificacion.tex
+++ b/codificacion.tex
@@ -1,4 +1,6 @@
 \chapter{Reglas de diseño y programación}
+\chapterauthor{Autor1, Autor2}
+
 \section{¿Por qué?}
 
 {En toda comunidad se deben tener reglas, y como tal, las comunidades de software libre no son la excepción. Por tanto al ser un entorno de trabajo tan grande, es necesario poder ponerse de acuerdo entre los participantes.}
