--- a/gestion.tex
+++ b/gestion.tex
@@ -1,4 +1,6 @@
 \chapter{Gestión y Calidad de Proyectos de Software Libre}
+\chapterauthor{Autor1, Autor2}
+
 \section{Qué es una comunidad de Software Libre}
 
 Una Comunidad de Software Libre es un {\bf grupo de personas que cooperan entre sí en distintas áreas relacionadas con el Software Libre}. Dependiendo del área de la comunidad, sus objetivos van a variar.
