--- a/introduccion.tex
+++ b/introduccion.tex
@@ -1,4 +1,6 @@
 \chapter{Introducción al Software Libre}
+\chapterauthor{Autor1, Autor2}
+
 \section{Algo de Historia}
 
 {\bf En 1970} la mayoría de las compañías tenían como forma de cortesía el hábito de publicar su código fuente en archivos legibles. Dichas mejoras eran publicadas, mejoradas por los usuarios y las empresas adoptaban estas mejoras.
