--- a/licencias.tex
+++ b/licencias.tex
@@ -1,4 +1,6 @@
 \chapter{Licencias de software}
+\chapterauthor{Autor1, Autor2}
+
 \section{¿Qué es una Licencia de Software Libre?}
 
 Una licencia de software libre es un impreso que otorga al receptor de una pieza de software derechos extensivos para modificarla y redistribuir ese software. Estas acciones normalmente se proh'iben por las leyes de copyright, pero el que posee los derechos, normalmente el autor de un trozo de software, puede eliminar esas restricciones acompañando al software con una licencia de software que otorgue al receptor de estos derechos. El software que usa tales licencias se denomina software libre y esas libertades las concede el propietario del copyright.
