--- a/manual.tex
+++ b/manual.tex
@@ -7,8 +7,17 @@
 %\usepackage{authblk}
 %\usepackage{makeidx}
 
-\title{Manual de la asignatura Ingeniería de Software de Fuentes Abiertas/Libre}
-\author{Ricardo Medel (compilador)}
+\makeatletter
+\newcommand{\chapterauthor}[1]{%
+  {\parindent0pt\vspace*{-25pt}%
+  \linespread{1.1}\large\scshape#1%
+  \par\nobreak\vspace*{35pt}}
+  \@afterheading%
+}
+\makeatother
+
+\title{Manual de la asignatura Ingeniería de Software de Fuentes Abiertas/Libre - versión 2018}
+\author{Ricardo Medel y colaboradores}
 
 \begin{document}
 
