--- a/negocios.tex
+++ b/negocios.tex
@@ -1,8 +1,5 @@
-
 \chapter{Modelos de negocio con software libre}
-
-
-
+\chapterauthor{Autor1, Autor2}
 
 \section{Financiación de los Proyectos de Software Libre}
 
