--- a/sistoperativos.tex
+++ b/sistoperativos.tex
@@ -1,4 +1,5 @@
 \chapter{Sistemas operativos de software libre}
+\chapterauthor{Autor1, Autor2}
 
 \section{Distribuciones Linux}
 Una distribución Linux (coloquialmente llamada distro) es una distribución de software basada en el núcleo Linux que incluye determinados paquetes de software para satisfacer las necesidades de un grupo específico de usuarios, dando así origen a ediciones domésticas, empresariales y para servidores. Por lo general están compuestas, total o mayoritariamente, de software libre, aunque a menudo incorporan aplicaciones o controladores propietarios.
