--- a/licencias.tex
+++ b/licencias.tex
@@ -1,27 +1,19 @@
-\documentclass{article}
-% preámbulo
-\usepackage[spanish]{babel}
-\usepackage[utf8]{inputenc}
-\title{Licencias de software}
-\author{Bartoszensky, Luciano
-\and
+\chapter{Licencias de software}
+\chapterauthor{
+Bartoszensky, Luciano
+,
 Cuello, Nahuel Ignacio
-\and
+,
 Ferrero, Facundo
-\and
+,
 Niño, Jeremías
-\and
+,
 Segurado, Lucas Martín
-\and
+,
 Zamora, Fernando
 }
 
-% cuerpo del documento
-\begin{document}
-\maketitle
-\newpage
-\tableofcontents
-\newpage
+
 \section{¿Qué es una Licencia de Software Libre?}
 
 Una licencia de software libre es un impreso que otorga al receptor de una pieza de software derechos extensivos para modificarla y redistribuir ese software. Estas acciones normalmente se prohiben por las leyes de copyright, pero el que posee los derechos, normalmente el autor de un trozo de software, puede eliminar esas restricciones acompañando al software con una licencia de software que otorgue al receptor de estos derechos. El software que usa tales licencias se denomina software libre y esas libertades las concede el propietario del copyright.
@@ -132,7 +124,3 @@ La FSF, el grupo que mantiene la definición de software libre, mantiene una lis
 \end{itemize}
 \end{itemize}
 
-
-
-
-\end{document}
