algunas correcciones al estilo de secciones de licencias.tex

--- a/licencias.tex
+++ b/licencias.tex
@@ -17,10 +17,9 @@ Zamora, Fernando
 \section{¿Qué es una Licencia de Software Libre?}
 
 Una licencia de software libre es un impreso que otorga al receptor de una pieza de software derechos extensivos para modificarla y redistribuir ese software. Estas acciones normalmente se prohiben por las leyes de copyright, pero el que posee los derechos, normalmente el autor de un trozo de software, puede eliminar esas restricciones acompañando al software con una licencia de software que otorgue al receptor de estos derechos. El software que usa tales licencias se denomina software libre y esas libertades las concede el propietario del copyright.
-\\
-\\
-{\bf Historia}
-\\
+
+\subsection{Historia}
+
 Antes de 1980 no había licencias, sino que eran estatutos informales escritos por los desarrolladores, donde todavía no se escribìan las licencias para que sean defendidas en un juzgado, ya que las mismas eran compartidas por todos, y no había problemas de “adjudicación”.
 No existía el “Copyleft” todavìa y eran licencias del tipo permisivas.
 
@@ -28,7 +27,9 @@ Entre 1990-2000 las empresas escrìbian sus propias licencias o utilizaban licen
 Estas licencias produjo problemas de complejidad y compatibilidad, ya que no se podían incluir en muchos casos, módulos o librerías, o no se podía utilizar un cierto software de manera libre como se venía haciendo.
 
 La introducción de licencias pagas, llevó a aumentar los costos en muchos casos, de los productos desarrollados, ya que para hacer uso de ciertos aplicativos, módulos y demás, se tuvo que empezar a pagar.
-\newpage
+
+%\newpage
+
 \section{Organismos}
 \begin{itemize}
 \item {\bf Fundación para el software libre(FSF) }
@@ -54,7 +55,8 @@ Directrices que permiten ver si una licencia de software es una licencia de soft
 	\item La licencia no debe contaminar otro software
 \end{itemize}
 \end{itemize}
-\newpage
+%\newpage
+
 \section {Problemas prácticos con las Licencias}
 \begin{itemize}
 	\item {\bf Compatibilidad de licencias}
@@ -62,7 +64,8 @@ Los paquetes de licencias de software que contienen explicaciones contradictoria
 	\item {\bf Propósito de uso}
 Restricciones sobre el uso del software no son generalmente aceptadas de acuerdo con la FSF, OSI, Debian, o las distribuciones basadas en BSD. Algunos ejemplos son prohibir el software sólo para uso privado, para propósitos militares, para comparación o marco de mercado, para un uso que conlleve cuestiones éticamente cuestionables, o en organizaciones comerciales.
 \end{itemize}
-\newpage
+%\newpage
+
 \section {Copyleft, Copyright y Creative Commons}
 \begin{itemize}
 \item {\bf Copyleft}
@@ -72,7 +75,8 @@ Licencia más restrictiva, sólo el autor puede utilizarlo y si alguien quiere u
 \item {\bf Creative Commons}
 Determina cómo va a circular el software en internet, es decir, algunos autores pueden dar derechos a otras personas, son gratuitas y su registro no es obligatorio.
 \end{itemize}
-\newpage
+%\newpage
+
 \section {Tipos de Licencias}
 El software no se vende, se licencia. Una licencia es aquella autorización formal con carácter contractual que un autor de un software da a un interesado para ejercer actos de explotación legales. Es decir, el software no se compra, sino que se adquieren una serie de derechos sobre el uso que se le puede dar. En las licencias de software libre esos derechos son muy abiertos y permisivos, apenas hay restricciones al uso de los programas. De ahí que ayude al desarrollo de la cultura. Pueden existir tantas licencias como acuerdos concretos se den entre el autor y el licenciatario. Desde el punto de vista del software libre, existen distintas variantes del concepto o grupos de licencias, las mismas pueden clasificarse en distintos grupos:\\
 
@@ -88,7 +92,8 @@ La condición de distribuirse bajo la misma licencia original y al tratarse de s
 Los ejemplos más conocidos de este tipo de licencias son la GPL, LGPL y Affero GPL.
 \end{itemize}
 \end{itemize}
-\newpage
+%\newpage
+
 \section{Papel de la FSF y OSI}
 
 {\bf Licencias de código abierto aprobadas por el OSI}
@@ -96,8 +101,9 @@ El grupo OSI define y mantiene una lista de licencias de código abierto aprobad
 \\
 {\bf Licencias de software libre aprobadas por la FSF}
 La FSF, el grupo que mantiene la definición de software libre, mantiene una lista de licencias de software libre no exhaustiva.12 La FSF es una organización sin ánimo de lucro cuya misión es promover la libertad de los usuarios de los ordenadores y defender los derechos de todos los usuarios del software libre. Los desarrolladores de software libre garantizan que todo el mundo tenga los mismos derechos para sus programas, cualquier usuario puede estudiar el código fuente, modificarlo, y compartir el programa. Por el contrario, la mayoría del software lleva una nota que impide a los usuarios estos derechos básicos, dejando a los usuarios susceptibles a los deseos de sus propietarios y a la vulnerabilidad de ser vigilados. La FSF prefiere las licencias de software libre copyleft (share-alike) mejor que las licencias de software libre permisivas para la mayoría de los propósitos. En su lista distingue entre las licencias de software libre que son compatibles o incompatibles con el la GPL de copyleft de la FSF.
-\\
-\newpage
+
+%\newpage
+
 \section{Garantìas, condiciones y limitaciones brindadas por las licencias}
 \begin{itemize}
 \item Garantìas: Son aquellas características del software que son permitidas o autorizadas por la licencia.
